主页，注册页，登录，商品的默认排序都已弄好

--- a/Application/Home/View/Common/index_header.html
+++ b/Application/Home/View/Common/index_header.html
@@ -1,11 +1,11 @@
 <header id="header">
                 <div class="common-width clearfix">
                     <h1 class="fl">
-                        <a class="logo base-logo" href="index.html">外卖超人</a>
+                        <a class="logo base-logo" href="index.html">沙漏外卖</a>
                     </h1>
                     
                         <ul class="member logging" ng-init="loginInfo=true">
-                            <li><a href="index.html" class="index">首页</a></li>
+                            <li><a href="{:U('Index/index')}" class="index">首页</a></li>
                         
         <if condition="$user_phone">
 
@@ -21,13 +21,13 @@
                         <li class="login-register">
                             <a href="{:U('Login/index')}"  class="login"  rel="nofollow">登录</a>
                                 <span class="cg">/</span>
-                            <a href="register.html" rel="nofollow" class="register">注册</a>
+                            <a href="{:U('Register/index')}" rel="nofollow" class="register">注册</a>
                         </li>
             </if>
                             <li class=""><a href="member_order.html" class="order-center"  rel="nofollow">我的订单</a></li>
                             <li class=""><a href="member_collect.html"  rel="nofollow">我的收藏</a></li>
                             <li class=""><a href="gifts.html"  rel="nofollow">氪星礼品站</a></li>
-                            <li class="phone-client "><a href="#"  rel="nofollow" target="_blank"><span>手机客户端</span></a></li>
+                            
                         </ul>
                     
                 </div>
