--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -4,8 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
-    <meta name="description" content="叫上海[半价菜][送可乐]樱花日本料理外卖上外卖超人,全球领先订餐平台，提供宋园路地铁站
-    网上订餐,  [半价菜][送可乐]樱花日本料理外卖菜单, [半价菜][送可乐]樱花日本料理每日特价。马上登陆外卖超人，轻松三步即刻享受周边美食！" />
+    <meta name="description" content="[半价菜][送可乐]樱花日本料理外卖,全球领先订餐平台， [半价菜][送可乐]樱花日本料理外卖菜单, [半价菜][送可乐]樱花日本料理每日特价。轻松三步即刻享受周边美食！" />
     <meta name="viewport" content="user-scalable=no">
     <meta name="google-site-verification" content="BstJA3X9z6f9HcvoN9AZTwaKo_9Abj_j7dVBPfy640s" />
     <meta name="baidu-site-verification" content="IYCrtVH0i1" />
@@ -18,7 +17,7 @@
       } (document, screen));</script>
     <link rel="stylesheet" href="__PUBLIC__/Home/css/common.css?v=2015-5-20" />
     <link rel="stylesheet" href="__PUBLIC__/Home/css/menuPage.css?v=2015-5-20" />
-    <title>店铺商品</title></head>
+    <title>菜单列表</title></head>
   
   <body class="day " ng-controller="bodyCtrl" day-or-night>
     <section class="common-back" id="wrapBackground">
@@ -69,129 +68,128 @@
             <li>
               <a href="shop_brand.html" id='point-tab'>大家都在点</a></li>
           </ul>
-          <section class="main-box clearfix" lazy-img-load>
-            <div class="main fl">
-              <div class="inner-main">
-                <nav class="list-order-nav clearfix" id="list-order-nav">
-                  <ul class="fl">
-                    <li>菜单排序：</li>
-                    <li>
-                      <a href="javascript:void(0);" class="sort-default active">默认排序</a></li>
-                    <li class="split-line">|</li>
-                    <li>
-                      <a href="javascript:void(0);" class="sort-sale descend">销量
-                        <i class="order-icon"></i></a>
-                    </li>
-                    <li class="split-line">|</li>
-                    <li>
-                      <a href="javascript:void(0);" class="sort-price">价格
-                        <i class="order-icon"></i></a>
-                    </li>
-                    <li class="split-line">|</li></ul>
-                </nav>
-<foreach name="list" item="im" key="m">
-                <div id="menu-main" class="menu-main">
-                  <article class="collapse section-{$im.type_id}">
-                    <header accordion>
-                      <h3 class="ellipsis">{$im.type_name}</h3>
-                      <span ng-if="sectionCount['{$im.type_id}']" ng-class="{disinbl:sectionCount['{$im.type_id}']}" class="badge disnone" ng-bind="sectionCount['{$im.type_id}']"></span>
-                      <i class="icon shrink-icon position"></i>
-                    </header>
-                    <section>
-                      <ul class="clearfix menu-group menu-group-img menu-first-load">
-    <foreach name='im.product' item="pro">
-                        <li title="{$pro.name}" class="menu-item hasImg" accessorykey="{$im.type_id}-{$pro.id}" data-sale="8" data-price="{$pro.price}">
-                          <div class="menu-item-img">
-                            <img data-src="__PUBLIC__/Uploads/{$pro.thumb}?imageView2/1/w/202/h/202/" src="__PUBLIC__/Uploads/{$pro.thumb}" width="202" height="202" /></div>
-                          <div class="meun-item-name">
-                            <span class="ellipsis">{$pro.name}</span></div>
-                          <p class="ellipsis meun-item-des"></p>
-                          <div class="meun-item-sale clearfix">
-                            <span class="last"></span>
-                            <span class="price">{$pro.price}</span>
-                            <span ng-if="menuItemCount['{$im.type_id}-{$pro.id}']" ng-class="{disinbl:menuItemCount['{$im.type_id}-{$pro.id}']}" class="badge disnone" ng-bind="menuItemCount['{$im.type_id}-{$pro.id}']"></span>
-                            <span class="fr">已售{$pro.sold}份</span></div>
-                        </li>
-    </foreach>
-                      </ul>
-                      <ul class="clearfix menu-group"></ul>
-                    </section>
-                  </article>
-            
-                </div>
-    </foreach>
-              </div>
-            </div>
-            <aside class="fl">
-              <article class="cart" scroll-position-static="160" top="42">
-                <div class="menu-cart">
-                  <header>
-                    <!-- <h4 class="ellipsis w100p" title="[半价菜][送可乐]樱花日本料理">[半价菜][送可乐]樱花日本料理</h4> -->
-                    <h5>购物车
-                      <i class="icon trash-can-icon fr " ng-click="clearCart()"></i></h5>
-                  </header>
-                  <section>
-                    <div class="inner-cart empty" ng-class="{empty:isEmpty}">
-                      <div class="cart-thead clearfix">
-                        <div class="goods-name fs16">商品名</div>
-                        <div class="goods-count fs16">份数</div>
-                        <div class="goods-price fs16">单价</div>
-                        <div class="goods-subtotal fs16">小计</div></div>
-                      <div class="cart-item-list select-none">
-                        <div class="disnone" ng-class="{disnone:isEmpty}">
-                          <div class="cart-item cart-data clearfix" ng-repeat="obj in cartDatas">
-                            <div class="goods-name ellipsis" ng-bind="obj.name"></div>
-                            <div class="goods-id ellipsis" hidden="display" ng-bind="obj.id"></div>
-                            <div class="goods-count clearfix ellipsis">
-                              <span class="goods-sub icon sub-icon fl" sub-goods="[[$index]]"></span>
-                              <span class="goods-nums fl" ng-bind="obj.quantity"></span>
-                              <span class="goods-add icon add-icon fl" ng-click="addGoodsNum($index)"></span>
-                            </div>
-                            <div class="goods-price">
-                              <span ng-bind="obj.price|number:2"></span></div>
-                            <div class="goods-subtotal">
-                              <span ng-bind="(obj.quantity * obj.price)|number:2"></span></div>
-                            <div class="accessory-item" ng-class="{firstitem:$first}" ng-repeat="item in obj.options">
-                              <div class="cart-item clearfix">
-                                <div class="goods-name ellipsis" ng-bind="item.name"></div>
-                                <div class="goods-count fs20">
-                                  <span class="goods-sub fl"></span>
-                                  <span class="goods-nums fl" ng-bind="item.quantity"></span>
-                                </div>
-                                <div class="goods-price"><span ng-bind="item.price|number:2"></span></div>
-                                <div class="goods-subtotal"><span ng-bind="(item.price * item.quantity)|number:2"></span></div>
-                              </div>
-                            </div>
-                          </div>
-                          <!--附加物-->
-                          <div class="cart-item cart-item-addendum cart-data clearfix" ng-repeat="addition in additions">
-                            <div class="goods-name ellipsis" ng-bind="addition.name"></div>
-                            <div class="goods-count clearfix ellipsis">
-                              <span class="goods-nums fl" ng-bind="addition.quantity"></span>
-                            </div>
-                            <div class="goods-price">
-                              <span ng-bind="addition.price|number:2"></span></div>
-                            <div class="goods-subtotal">
-                              <span ng-bind="(addition.price * addition.quantity)|number:2"></span></div>
-                          </div>
-                          <!--附加物--></div>
-                        <div class="cart-item-empty">暂无商品，请在左边的菜单上点单</div></div>
-                      <div id="cart-item-list"></div>
-                      <div class="total clearfix disnone" ng-class="{disnone:isEmpty}">
-                        <div class="fl">配送费：
-                          <span ng-bind="deliveryCost|number:2"></span></div>
-                        <div class="fr">合计：
-                          <span ng-bind="total|number:2"></span></div>
+    <section class="main-box clearfix" lazy-img-load>
+                    <div class="main fl">
+                      <div class="inner-main">
+                           <nav class="list-order-nav clearfix" id="list-order-nav">
+                        <ul class="fl">
+                            <li>菜单排序：</li>
+                            <li><a href="javascript:void(0);" class="sort-default active">默认排序</a></li>
+                            <li class="split-line">|</li>
+                            <li><a href="javascript:void(0);" class="sort-sale descend">销量<i class="order-icon"></i></a></li>
+                            <li class="split-line">|</li>
+                            <li><a href="javascript:void(0);" class="sort-price">价格<i class="order-icon"></i></a></li>
+                            <li class="split-line">|</li>
+                            <li><a href="javascript:void(0);" class="sort-price">价格-销量<i class="order-icon"></i></a></li>
+                            <li class="split-line">|</li>
+                        </ul>
+                    </nav>
+
+                        <div id="menu-main" class="menu-main">
+              <foreach name="list" item="im" key="m">
+                          <article class="collapse section-{$im.type_id}">
+                            <header accordion>
+                              <h3 class="ellipsis">{$im.type_name}</h3>
+                              <span ng-if="sectionCount['{$im.type_id}']" ng-class="{disinbl:sectionCount['{$im.type_id}']}" class="badge disnone" ng-bind="sectionCount['{$im.type_id}']"></span>
+                              <i class="icon shrink-icon position"></i>
+                            </header>
+                            <section>
+                              <ul class="clearfix menu-group menu-group-img menu-first-load">
+            <foreach name='im.product' item="pro">
+                                <li title="{$pro.name}" class="menu-item hasImg" accessorykey="{$im.type_id}-{$pro.id}" data-sale="{$pro.sold}" data-price="{$pro.price}">
+                                  <div class="menu-item-img">
+                                    <img data-src="__PUBLIC__/Uploads/{$pro.thumb}?imageView2/1/w/202/h/202/" src="__PUBLIC__/Uploads/{$pro.thumb}" width="202" height="202" /></div>
+                                  <div class="meun-item-name">
+                                    <span class="ellipsis">{$pro.name}</span></div>
+                                  <p class="ellipsis meun-item-des"></p>
+                                  <div class="meun-item-sale clearfix">
+                                    <span class="last"></span>
+                                    <span class="price">{$pro.price}</span>
+                                    <span ng-if="menuItemCount['{$im.type_id}-{$pro.id}']" ng-class="{disinbl:menuItemCount['{$im.type_id}-{$pro.id}']}" class="badge disnone" ng-bind="menuItemCount['{$im.type_id}-{$pro.id}']"></span>
+                                    <span class="fr">已售 {$pro.sold} 份</span>
+                                  
+                                    </div>
+                                </li>
+            </foreach>
+                              </ul>
+                              <ul class="clearfix menu-group"></ul>
+                            </section>
+                          </article>
+                 </foreach>    
+                        </div><!-- <div id="menu-main" class="menu-main"> -->
+           
                       </div>
-                      <div class="checkout">
-                        <button class="checkout btn" id="createOrder" ng-bind="createOrderBtnName">立即下单</button></div>
                     </div>
-                  </section>
+      <aside class="fl">
+        <article class="cart" scroll-position-static="160" top="42">
+          <div class="menu-cart">
+            <header>
+              <!-- <h4 class="ellipsis w100p" title="[半价菜][送可乐]樱花日本料理">[半价菜][送可乐]樱花日本料理</h4> -->
+              <h5>购物车
+                <i class="icon trash-can-icon fr " ng-click="clearCart()"></i></h5>
+            </header>
+            <section>
+              <div class="inner-cart empty" ng-class="{empty:isEmpty}">
+                <div class="cart-thead clearfix">
+                  <div class="goods-name fs16">商品名</div>
+                  <div class="goods-count fs16">份数</div>
+                  <div class="goods-price fs16">单价</div>
+                  <div class="goods-subtotal fs16">小计</div></div>
+                <div class="cart-item-list select-none">
+                  <div class="disnone" ng-class="{disnone:isEmpty}">
+                    <div class="cart-item cart-data clearfix" ng-repeat="obj in cartDatas">
+                      <div class="goods-name ellipsis" ng-bind="obj.name"></div>
+                      <div class="goods-id ellipsis" hidden="display" ng-bind="obj.id"></div>
+                      <div class="goods-count clearfix ellipsis">
+                        <span class="goods-sub icon sub-icon fl" sub-goods="[[$index]]"></span>
+                        <span class="goods-nums fl" ng-bind="obj.quantity"></span>
+                        <span class="goods-add icon add-icon fl" ng-click="addGoodsNum($index)"></span>
+                      </div>
+                      <div class="goods-price">
+                        <span ng-bind="obj.price|number:2"></span></div>
+                      <div class="goods-subtotal">
+                        <span ng-bind="(obj.quantity * obj.price)|number:2"></span></div>
+                      <div class="accessory-item" ng-class="{firstitem:$first}" ng-repeat="item in obj.options">
+                        <div class="cart-item clearfix">
+                          <div class="goods-name ellipsis" ng-bind="item.name"></div>
+                          <div class="goods-count fs20">
+                            <span class="goods-sub fl"></span>
+                            <span class="goods-nums fl" ng-bind="item.quantity"></span>
+                          </div>
+                          <div class="goods-price"><span ng-bind="item.price|number:2"></span></div>
+                          <div class="goods-subtotal"><span ng-bind="(item.price * item.quantity)|number:2"></span></div>
+                        </div>
+                      </div>
+                    </div>
+                    <!--附加物-->
+                    <div class="cart-item cart-item-addendum cart-data clearfix" ng-repeat="addition in additions">
+                      <div class="goods-name ellipsis" ng-bind="addition.name"></div>
+                      <div class="goods-count clearfix ellipsis">
+                        <span class="goods-nums fl" ng-bind="addition.quantity"></span>
+                      </div>
+                      <div class="goods-price">
+                        <span ng-bind="addition.price|number:2"></span></div>
+                      <div class="goods-subtotal">
+                        <span ng-bind="(addition.price * addition.quantity)|number:2"></span></div>
+                    </div>
+                    <!--附加物--></div>
+                  <div class="cart-item-empty">暂无商品，请在左边的菜单上点单</div></div>
+                <div id="cart-item-list"></div>
+                <div class="total clearfix disnone" ng-class="{disnone:isEmpty}">
+                  <div class="fl">配送费：
+                    <span ng-bind="deliveryCost|number:2"></span></div>
+                  <div class="fr">合计：
+                    <span ng-bind="total|number:2"></span></div>
                 </div>
-               
-              </article>
-            </aside>
-          </section>
+                <div class="checkout">
+                  <button class="checkout btn" id="createOrder" ng-bind="createOrderBtnName">立即下单</button></div>
+              </div>
+            </section>
+          </div>
+         
+        </article>
+      </aside>
+    </section>
           <span id="element" style="position:absolute;display:none" class="badge">1</span>
      
         </section>
@@ -492,7 +490,7 @@
     var jsons = '{$list2}';
     jsons = JSON.parse(jsons);
 
-   // console.log(jsons);
+    console.log(jsons);
     sections=[];
       accessoryObj = {},
       orderObj = [],
@@ -527,7 +525,7 @@ for(var j=0; j<jsons[i].product.length; j++)
             };
           //type    
     };
-    console.log(sections);
+   // console.log(sections);
       if (sections) {
         for (var i = 0,
         len = sections.length; i < len; i++) {
