--- a/Application/Home/View/Login/index.html
+++ b/Application/Home/View/Login/index.html
@@ -38,10 +38,10 @@
         <div class="common-width">
             
                 <section class="clearfix">
-                    <h1 class="logo" title="外卖超人">
+                    <h1 class="logo" title="沙漏外卖">
                         <a href="index.html"></a>
                     </h1>
-                    <span class="page-name"> | 登录</span>
+                    <span class="page-name"> | <a href="{:U('Login/idnex')}">登录</a></span>
                 </section>
                 
             
