添加新功能了

--- a/Application/Home/View/Common/index_footer.html
+++ b/Application/Home/View/Common/index_footer.html
@@ -11,7 +11,7 @@
         </div>
     </div>
     <div class="footer-last">
-        <a target="_blank" class="foot-logo-1 base-logo" href="index.html"></a>
+        <a target="_blank" class="foot-logo-1 base-logo" href="{:U('/Home/Index/index')}"></a>
         <div class="tc fs14 light-gray mb10">
           ©2017 waimaichaoren.com All Rights Reserved - 沪ICP备11019908号
         </div>
