later 独立组件 美好注册登录 弹窗

--- a/Application/Home/View/Index/index_intro.html
+++ b/Application/Home/View/Index/index_intro.html
@@ -28,6 +28,8 @@
     <section class="common-back" id="wrapBackground">
         
         <include file="Common/index_header" />
+        <section class="menupage-main common-width" ng-init="city_name='上海'">
+        <include file="Common/index_slxd" />
  <ul class="clearfix menu-nav-list" scroll-position-static="160">
             <li class="no-line active">
               <a href="{:U('/Home/Index/index_intro')}">餐厅介绍</a></li>
