--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -24,6 +24,8 @@
   <body class="day " ng-controller="bodyCtrl" day-or-night>
     <section class="common-back" id="wrapBackground">
 <include file="Common/index_header" />
+<section class="menupage-main common-width" ng-init="city_name='上海'">
+        <include file="Common/index_slxd" />
        <ul class="clearfix menu-nav-list" scroll-position-static="160">
             <li class="no-line ">
               <a href="{:U('/Home/Index/index_intro')}">餐厅介绍</a></li>
@@ -401,7 +403,7 @@
     var jsons = '{$list2}';
     jsons = JSON.parse(jsons);
 
-    console.log(jsons);
+    //console.log(jsons);
     sections=[];
       accessoryObj = {},
       orderObj = [],
